Added business logic for application Added Dockerfile
